# restaurant-planner

./: Cargo.toml  README.md  sample.env
src/: gemini_client.rs  lib.rs  main.rs  restaurant_planner.rs  serp_client.rs
