[package]
edition = "2021"
name = "restaurant-planner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-recursion = "1.0.5"
dotenv = "0.15.0"
google-cloud-auth = "0.13.0"
once_cell = "1.12.0"
reqwest = "0.11.24"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
serpapi-search-rust = "0.1.0"
tokio = {version = "1.36.0", features = ["full"]}

[features]
debug = []
